Implement Pin feature for KRunner

BUG: 353026
FIXED-IN: 5.21

For this the close button has been replaced with a checkable button which pins the window. Just like in the system tray.